# PENNIS

./: .gitignore  .gitmodules  CMakeLists.txt  image_model.pnn  imgui.ini  sine_model.pnn  trained_model.pnn
compiled shaders/: backprop.spv  forward.spv  sampler.spv
shaders/: adam.comp  adam.spv  backprop.comp  backprop.spv  forward.comp  forward.spv  reduce.comp  reduce.spv  sampler.comp
src/: main.cpp  pennis.cpp  pennis.hpp
src/examples/: image_fitting.cpp  image_model.pnn  loadFromFile_example.cpp  mnist_fitting.cpp  mnist_model.pnn  sine_fitting.cpp  sine_model.pnn
src/examples/fashion mnist/: fashion_demo.cpp
src/examples/image fitting/: image_fitting.cpp
src/examples/loadFromFile example/: load_example.cpp
src/examples/mnist training demo/: mnist_demo.cpp
src/examples/sine fitting/: sine_fitting.cpp
src/examples/trained models/: image_model.pnn  mnist_model.pnn  sine_model.pnn
